2005-12-09  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/stringlistlist.cpp :
	* lib/stringlistlist.h :

	  - Added a class to hold a list of stringlists.

	* lib/stringlist.cpp :
	* lib/stringlist.h :

	  - vlad_stringlist is now also a list_item. This allows us to make
	    a list of stinglists.

2005-12-08  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_2_0

	* lib/polbase.cpp :
	* lib/polbase.h :

	  - Removed unnecessary calls to encode_fact() in compute_generate().

	  - Added another print_fact() function. This one take a vlad_fact
	    instead of a fact id.

	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :
	* lib/expression.cpp :
	* lib/expression.h :

	  - Added traverse functionality.

	* lib/list.cpp :
	* lib/list.h :

	  - Added a list::traverse() function and an abstract list_trav class
	    for traversing the list.

2005-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* lib/numberlist.cpp :
	* lib/numberlist.h :
	* lib/stringlist.cpp :
	* lib/stringlist.h :

	  - Name cleanup: vlad_{string|number} -> vlad_{string|number}list_item

2005-12-07  Vino Fernando Crescini  <jcrescin@cit.uws.edu.au>

	* Tagged vlad-1_1_2

	* test/mem_test.sh :

	  - Added memory test script.

	* configure :
	* configure.ac :
	* lib/config.h.in :

	  - Added a new --enable-memtest option to compile the alternate
	    memory allocator/deallocator functions and classes.

	* lib/Makefile.in :

	  - Now compiles mem.cpp

	* lib/list.h :
	* lib/mapper.h :
	* lib/polbase.cpp :
	* lib/polbase.h :
	* lib/smwrap.h :
	* lib/symtab.h :

	  - Classes in these files now inherits from vlad_mem.

	* lib/mem.h :
	* lib/mem.cpp :

	  - If configured with --enable-memtest, the special new/malloc/etc.
	    wrapper functions will be compiled. Each of these wrappers dumps
	    the mem address to stderr before alloc/deallocing memory.

	* lib/expression.cpp :
	* lib/seqtab.cpp :
	* lib/smwrap.cpp :